Fix CSS overlaps

--- a/src/LandingPage/LandingPage.css
+++ b/src/LandingPage/LandingPage.css
@@ -28,14 +28,12 @@
   font-size: 50px;
   line-height: 60px;
   color: #0b132a;
-  font-family: 'Roboto', sans-serif;
 }
 
 #desc-paragraph {
   font-size: 24px;
   line-height: 30px;
   color: #4f5665;
-  font-weight: 400;
 }
 
 #desc-btn {
@@ -68,20 +66,14 @@
   font-size: 18px;
   line-height: 25px;
   color: #4f5665;
-  font-weight: 400;
 }
 
 #features-desc ul li {
   font-size: 16px;
   line-height: 28px;
   color: #4f5665;
-  font-weight: 400;
 }
 
-.images {
-  width: 510px;
-  height: 416px;
-}
 .check-circle {
   color: #2aaf4a;
 }
@@ -97,7 +89,6 @@
   background-color: #fff;
   -webkit-box-shadow: 0px 10px 35px 7px rgba(11, 19, 42, 0.12);
   box-shadow: 0px 10px 35px 7px rgba(11, 19, 42, 0.12);
-  font-weight: 400;
 }
 
 #contact-us #sm-links {
@@ -332,14 +323,13 @@ footer {
   #desc-paragraph {
     font-size: 16px;
     line-height: 22px;
-
   }
 
   #desc-btn {
     font-size: 16px;
-    width: 180px;
     height: 40px;
     border-radius: 5px;
+    width: 130px;
   }
 
   #desc-image {
